try to fix time jumping on chrome

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,7 @@ html, body, #root {
 }
 
 .time {
-	@apply text-6xl text-center select-none m-auto;
+	@apply text-6xl text-center select-none flex justify-center items-center;
 	grid-column: 1 / span 2;
 }
 
